[package]
name = "audiowiz"
version = "0.1.1"
edition = "2021"
authors = [ "Ashrit Yarava <ashdragon95@gmail.com>" ]
description = "Apply some nice audio effects to .mp3 files in the current directory."
license = "MIT"
homepage = "https://github.com/Ashrit-Yarava/audiowiz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
rayon = "1.5"
ansi_term = "0.12.1"
